<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CODPAA</string>
    <string name="action_settings">Settings</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="start">Iniciar Sesion</string>
    <string name="icono_de_aplicacion">icono de aplicacion</string>
    <string name="regis">Registrar</string>
    <string name="nombreAplicacion">Codpaa</string>
    <string name="update">Actualizar base de usuarios</string>
    <string name="cerra">Salir de la aplicacion</string>
    <string name="tienda">Elige tienda</string>
    <string name="summa">Developed by Ing. Gustavo Ibarra</string>
    <string name="loading">Cargando....</string>
    <string name="updateGeneral">actualizacion datos</string>
    <string name="btnimage">Boton de las tiendas</string>
    <string name="locali">Localizar</string>
    <string name="send">Enviar</string>
    <string name="descripEnv">boton que abre actividad enviar</string>
    <string name="botonLocat">boton que abre las localizaciones guardadas</string>
    <string name="fren">En este menu se capturan los frentes de productos</string>
    <string name="surt">en este menu se realiza la captura de resurtido de producto</string>
    <string name="invB">Inventario en Bodega</string>
    <string name="exhi">Exhibiciones Especiales</string>
    <string name="enca">Encargado de tienda</string>
    <string name="prec">Precio</string>
    <string name="Sal">salida</string>
    <string name="numFreString">Frentes en el Mueble</string>
    <string name="stringMarca">Marca</string>
    <string name="stringCharo">Numero de Charola</string>
    <string name="StringCantidadFre">Cantidad</string>
    <string name="guar">Guardar</string>
    <string name="back">Regresar</string>
    <string name="frentes">Frentes en Exhibicion</string>
    <string name="pues">Seleccione puesto</string>
    <string name="nombEncar">Ingrese el nombre del encargado</string>
    <string name="txtpro">Seleccione Producto</string>
    <string name="produ">Producto</string>
    <string name="necesario">¿Resurtiste?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="surtido">Surtido de Mueble</string>
    <string name="exit">Salir</string>
    <string name="cha1">1 Charola</string>
    <string name="cha2">2 Charola</string>
    <string name="cha3">3 Charola</string>
    <string name="cha4">4 Charola</string>
    <string name="cha5">5 Charola</string>
    <string name="cha6">6 Charola</string>
    <string name="cha7">7 Charola</string>
    <string name="cant">Cantidad</string>
    <string name="num">Insert Numero</string>
    <string name="aceptar">Aceptar</string>
    <string name="exhibicion">Exhibicion</string>
    <string name="imaMa">Imagen de la marca</string>
    <string name="porc">Tamaño</string>
    <string name="entrada">Entrada</string>
    <string name="inventario">Inv. Gral</string>
    <string name="Entradacheck">Entrada</string>
    <string name="Salidacheck">Salida</string>
    <string name="logo">Logotipo de la Aplicacion</string>
    <string name="sucurgrupo">Tienda</string>
    <string name="in">Entrada</string>
    <string name="out">Salida</string>
    <string name="mensaje">Mensajes</string>
    <string name="ruta1">Ruta</string>
    <string name="frente">Frentes</string>
    <string name="tiendaErronea">Me equivoque de Tienda</string>
    <string name="vistasPendientes">Visitas</string>
    <string name="frentesPendientes">Frentes</string>
    <string name="surtidoPendiente">Surtido</string>
    <string name="inventarioPendiente">Inventario</string>
    <string name="exhibicionesPendientes">Exhibiciones</string>
    <string name="SelectTienda">Selecciona Tienda</string>
    <string name="comentario">Escribe tu comentario</string>
    <string name="comentienda">Comentario</string>
    <string name="comen">Comentario</string>
    <string name="foto">Foto</string>
    <string name="escribeU">Usuario</string>
    <string name="escribeP">Contraseña</string>
    <string name="inteligencia">Precio</string>
    <string name="productoExistente">Producto existente</string>
    <string name="precioNormal">Precio Normal</string>
    <string name="infoOferta">Informacion de la Oferta</string>
    <string name="precioOferta">Precio Oferta</string>
    <string name="tipoOferta">Tipo de Oferta</string>
    <string name="cambioProducto">Cambios en Producto</string>
    <string name="ofertaCruz">Oferta Cruzada</string>
    <string name="prodExtra">Producto Extra (Ej: 20% mas en el mismo envase)</string>
    <string name="prodEmpa">Producto Emplayado</string>
    <string name="otro">Otro (Explique en comentarios)</string>
    <string name="cambioImagen">Cambio de Imagen</string>
    <string name="inteliMercado">Inteligencia de Mercado</string>
    <string name="updateProducts">Actualizar Producto</string>
    <string name="regisPendien">Registros pendientes</string>
    <string name="cajas">Cajas</string>
    <string name="rolA">Rol de activida</string>
    <string name="frentesProducto">Seleccione producto</string>
    <string name="vigencia">Vigencia</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="cambprecio">Cambio de Precio</string>
    <string name="precioCaja">Precio Caja</string>
    <string name="cantCajas">Cantidad de Cajas Vendidas</string>
    <string name="marca">Marca</string>
    <string name="cajmay">Vendedor Sombra</string>
    <string name="cajasmayoreo">Cajas Mayoreo</string>
    <string name="promptProducto">No has seleccionado marca</string>
    <string name="captura">Captaure</string>
    <string name="capIma">foto</string>
    <string name="imadescrip">Imagen evidencia</string>
    <string name="button">Enviar Imagen</string>
    <string name="camaraon">click en el Boton para encender la Camara</string>
    <string name="encendercamara">Iniciar Camara</string>
    <string name="imagedescrip">Imagen Evidencia</string>
    <string name="imagePhotopendiente">imagenes pendientes de envio</string>
    <string name="imaPendiente">Fotos No Enviadas</string>
    <string name="photoEnv">Enviar foto</string>
    <string name="systema">Sistema</string>
    <string name="fisico">Fisico</string>
    <string name="tipo">Tipo</string>
    <string name="pieza">Piezas</string>
    <string name="inven">Inventario</string>
    <string name="ruta">Ruta</string>
    <string name="enviar">Enviar</string>
    <string name="lote">Lote</string>
    <string name="caducidad">Caducidad</string>
    <string name="acerca_de">Acerca de</string>
    <string name="fecha">fecha</string>
    <string name="codigo_lote">escribe codigo de lote</string>
    <string name="out_conection">Se perdio la conexion, intentelo mas tarde</string>
    <string name="invalid_user">Usuario no valido</string>
    <string name="loaded_user">Usuario Cargado, puede iniciar sesion</string>
    <string name="tipo_carga">T. Carga:</string>
    <string name="bar_code">CB: $s</string>
    <string name="encuestas">Encuestas</string>

    <string name="wellcome">Bienvenido(a)</string>
    <string name="version">versión: </string>
    <string name="connection">Conexion</string>
    <string name="desconnect">Sin conexion</string>
    <string name="no_imagenes">No Existen imagenes Pendientes</string>
    <string name="process">En Proceso</string>
    <string name="sent">Enviada</string>
    <string name="title_activity_messagin">Mensajes</string>
    <string name="barcode">CB:N/A</string>
    <string name="venta_promedio">Venta Promedio</string>
    <string name="escribe_cantidad">escribe cantidad</string>

    <string name="frentes_linea_caja">Frentes en linea de Caja</string>
    <string name="resurtido_linea_caja">Resurtido en linea de Caja</string>

    <string name="address">Dirección</string>
    <string name="sending">Enviando....</string>

    <string name="menu_principal">Menu Principal</string>
    <string name="datos_producto">Datos Producto</string>
    <string name="captura_general">Captura General</string>
    <string name="estatus">Estatus</string>
    <string name="estado_del_producto">Estado del producto</string>
    <string name="errorEnvioImagen">Error al enviar</string>
    <string name="enviada">Enviada…</string>
    <string name="materiales">Materiales</string>
    <string name="encargado_ok">Encargado: OK</string>
    <string name="agregar">Agregar</string>
    <string name="user_disable">Usuario Desactivado</string>
    <string name="principal">Principal</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="configuracion">Configuracion</string>
    <string name="cerrar_aplicacion">Cerrar Aplicacion</string>
    <string name="tipo_promotor">Tipo promotor</string>
    <string name="impulsor">Modo Impulsor</string>
    <string name="impulsor_descripcion">en esté apartado de podra activar el modo impulsor</string>
    <string name="tienda_ruta">Tienda</string>
    <string name="proceso_aceptacion">Proceso Aceptacion</string>
    <string name="estatus_activity">Estatus</string>
    <string name="spinner_estatus">Spinner Estatus</string>
    <string name="cantidad_cajas">Inventario cajas</string>
    <string name="estudio_de_marcado">Estudio de marcado</string>
    <string name="cantidad_frentes">cantidad frentes</string>
    <string name="search_hint">filtro</string>
    <string name="medicion_mueble">Medición en cm</string>

    <string name="titulo1">Ubicación</string>
    <string name="avisoUbicacion">Codpaa recoge la ubicación del dispositivo para poder registrar la entrada y salida en tienda.\n\nEsta información solo se captura una sola vez y es guardada para el registro de la visita.</string>
    <string name="titulo2">Imágenes</string>
    <string name="avisoImagen">Codpaa recoge y guarda las fotos que capturas desde la aplicación para tener un registro de la evidencia.</string>
    <string name="titulo3">Políticas de privacidad</string>
    <string name="avisoPoliticas">Ahora Codpaa ha integrado las políticas de privacidad para que puedas acceder a ellas y conocer cómo es tratada tu información.</string>


</resources>