<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:subtitleTextAppearance="@style/ToolbarSubtitleAppearance"
        app:titleTextAppearance="@style/ToolbarTitleAppearance"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">


            <Spinner
                android:id="@+id/spiInMar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MiTema"
                android:layout_margin="3dp" />

            <Spinner
                android:id="@+id/spiInvPro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MiTema"
                android:layout_margin="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:baselineAligned="false"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipo"
                        android:id="@+id/tipoText"/>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:orientation="vertical"
                        android:theme="@style/MiTema"
                        android:id="@+id/radioInventario">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pieza"
                            android:id="@+id/radioTipo1" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cajas"
                            android:id="@+id/radioTipo2" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estatus"/>

                    <RadioGroup
                        android:id="@+id/radio_estatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/MiTema"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Des-Catalogado"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="No re-surtible"/>

                    </RadioGroup>
                </LinearLayout>



            </LinearLayout>



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:padding="5dp"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/fisico"
                        android:minEms="6"
                        android:id="@+id/textViewRowProducto"
                        />

                    <EditText
                        android:id="@+id/editInv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/cant"
                        android:theme="@style/MiTema"
                        android:inputType="number"
                        android:maxLength="7"
                        android:textColor="@color/negroFondo" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/systema"
                        android:minEms="6"
                        android:id="@+id/textViewRowMarca"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editSistema"
                        android:hint="@string/cant"
                        android:theme="@style/MiTema"
                        android:maxLength="7"
                        android:textColor="@color/negroFondo" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/estado_del_producto"
                    />
                <SeekBar
                    android:id="@+id/estado"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:max="5"
                    android:paddingTop="10dp"/>

                <TextView
                    android:id="@+id/resultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textColor="@color/accent"

                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:layout_margin="2dp"
                android:weightSum="1"
                android:clickable="false"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lote"
                    android:id="@+id/textView"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editLote"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLength="15"
                    android:textColor="@color/negroFondo"
                    android:hint="@string/codigo_lote"
                    android:theme="@style/MiTema"
                    android:maxLines="2"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caducidad"
                    android:id="@+id/textView2"
                    />

                <Button
                    android:id="@+id/button_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:textColor="@android:color/white"
                    android:drawableStart="@drawable/ic_event_white_24dp"
                    android:drawableLeft="@drawable/ic_event_white_24dp"
                    android:onClick="showDatePickerDialog"
                    android:backgroundTint="@color/blue_primary"
                    />



            </LinearLayout>


            <Button
                android:id="@+id/bInvGuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/blue_primary"
                android:padding="25dp"
                android:text="@string/guar"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>