<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <Spinner
            android:id="@+id/spMayMarca"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp" />

        <EditText
            android:id="@+id/edMayCajas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/cantCajas"
            android:textColor="#000000"
            android:inputType="number"
            android:maxLength="4" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btnGuCajasM"
            style="@style/btnStyleShakespeare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"

            android:text="@string/guar" />

        <Button
            android:id="@+id/btnSalCaMay"
            style="@style/btnStyleOrange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp"

            android:text="@string/exit" />

    </LinearLayout>
    

</ScrollView>
