<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ScrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">
            <EditText
                android:id="@+id/editComen"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/comentario"
                android:inputType="textMultiLine"
                android:maxLines="10" />

        </android.support.design.widget.TextInputLayout>




        <Button
            android:id="@+id/btnGuaComentario"
            style="@style/btnStyleShakespeare"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/save"
            android:drawableStart="@drawable/save"
            android:text="@string/guar" />

        <Button
            android:id="@+id/btnSalirComen"
            style="@style/btnStyleOrange"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/delete"
            android:drawableStart="@drawable/delete"
            android:text="@string/exit" />

    </LinearLayout>

</ScrollView>
